--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <p><input type="radio" name="user_type" value="customer" checked> Customer
                 <input type="radio" name="user_type" value="admin"> Admin</p>
             <p>
-                <input type="button" class="button button_round_corner button_blue" onclick="redirect_user()" value="LOGIN">
+                <input type="button" class="button button_round_corner button_blue" onclick="user_login()" value="LOGIN">
             </p>
         </form>
         <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
@@ -59,5 +59,6 @@
     }
 
 </script>
+<script src="js/scripts.js"></script>
 </body>
 </html>
