ft(challenge4): retrieve basic user order details
add function to retrieve user order history with fetch

[Delivers #161172778]

--- a/customer/index.html
+++ b/customer/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>Home | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
+    <script src="../js/scripts.js"></script>
 </head>
-<body>
+<body onload="getUserOrders()">
 
 <div id="main_wrapper">
 
@@ -15,7 +16,7 @@
             <ul class="nav nav-tabs nav-menu">
                 <li><a class="nav-link active" href="index.html"> Home</a></li>
                 <li><a class="nav-link" href="order_history.html">Order History</a></li>
-                <li><a class="nav-link" href="../index.html">Logout</a></li>
+                <li><a class="nav-link" href="../home.html">Logout</a></li>
             </ul>
         </div>
 
