--- a/customer/index.html
+++ b/customer/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>Home | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
-    <script src="../js/scripts.js"></script>
 </head>
-<body onload="getUserOrders()">
+<body>
 
 <div id="main_wrapper">
 
