--- a/customer/order_history.html
+++ b/customer/order_history.html
@@ -6,7 +6,7 @@
     <title>Order History | Fast Food Fast!</title>
     <link rel="stylesheet" href="../css/styles.css" type="text/css" />
 </head>
-<body>
+<body onload="getUserOrders()">
 
 <div id="main_wrapper">
 
@@ -27,30 +27,17 @@
         </div>
         <div class="form_content">
 
+            <div class="alert alert-info" id="alert-box" style="visibility:hidden;">No order history available.</div>
+
                 <table>
                     <thead>
-                        <th>Order Period</th>
-                        <th>Date Ordered</th>
+                        <th>Order</th>
+                        <th>Quantity</th>
                         <th>Status</th>
                         <th>Actions</th>
                     </thead>
-                    <tbody>
-                        <tr class="odd">
-                                <td>Chips + Chicken</td>
-                                <td>14/09/2018</td>
-                                <td>Pending</td>
-                                <td><a href="order_details.html"><button type="button" class="button button_round_corner button_green">  View </button></a> 
-                                    <a href="edit_order.html"><button type="button" class="button button_round_corner button_blue">  Edit </button></a>
-                                    <a href="order_details.html"><button type="button" class="button button_round_corner button_red">  Cancel </button></a>
-                                 </td>
-                            </tr>
-                        <tr class="even">
-                            <td>Breakfast</td>
-                            <td>07/09/2018</td>
-                            <td>Completed</td>
-                            <td><a href="order_details.html"><button type="button" class="button button_round_corner button_green">  View </button></a> </td>
-                        </tr>
-                        
+                    <tbody id="order_data">
+                        <!-- populate table dynamically  -->
                     </tbody>
                 </table>
 
@@ -59,5 +46,44 @@
 
 </div>
 
+<script>
+    function getUserOrders() {
+        return fetch('https://tims-fast-food.herokuapp.com/api/v1/users/orders', {
+            headers: {
+                'Authorization': 'Bearer ' + window.sessionStorage.getItem('token'),
+                'Content-Type': 'application/json'
+            }
+        }).then(response => response.json())
+        .then(response => {
+            console.log('Request succeeded with JSON response', response);
+            var count = Object.keys(response['myorders']).length;
+            var tbody = document.getElementById("order_data");
+            if (count > 0){
+                document.getElementById("alert-box").style.display = 'none';
+                for(var i=0; i < count; i++)
+                {
+                    // display table rows
+                    var row = '<tr class="odd"><td>'+ response['myorders'][i]['item']+'</td>';
+                    row += '<td>'+ response['myorders'][i]['quantity'] +'</td>';
+                    row += '<td>'+ response['myorders'][i]['status'] + '</td>';
+                    row += '<td><a href="order_details.html?id='+ response['myorders'][i]['id'] +'"><button type="button" class="button button_round_corner button_green">  View </button></a>';
+                    if (response['myorders'][i]['status'] == 'new'){
+                        row += '<a href="edit_order.html?id='+ response['myorders'][i]['id'] +'"><button type="button" class="button button_round_corner button_blue">  Edit </button></a>';
+                        row += '<a href="order_details.html?id='+ response['myorders'][i]['id'] +'"><button type="button" class="button button_round_corner button_red">  Cancel </button></a>';
+                    }
+                    row += '</td></tr>';
+                    tbody.innerHTML += row;
+                }
+            }
+            else{
+                document.getElementById("alert-box").style.visibility = 'visible';
+            }
+                    
+        })
+        .catch(function (error) {
+            console.log('Request failed', error);
+        });
+    }
+</script>
 </body>
 </html>
