add more request headers to get orders

--- a/admin/food_items.html
+++ b/admin/food_items.html
@@ -16,7 +16,7 @@
             <ul class="nav nav-tabs nav-menu">
                 <li><a class="nav-link" href="index.html"> Home</a></li>
                 <li><a class="nav-link active" href="food_items.html">Food Items</a></li>
-                <li><a class="nav-link" href="../index.html">Logout</a></li>
+                <li><a class="nav-link" href="../home.html">Logout</a></li>
             </ul>
         </div>
 
