fix(challenge4): view menu items
re-verify admin tokens manually on this end point

[Delivers #161172828]

--- a/admin/index.html
+++ b/admin/index.html
@@ -67,6 +67,7 @@
                 'Content-Type': 'application/json; charset=utf-8',
                 'Origin': '102.80.29.163'
             },
+            credentials: 'same-origin',
             mode: "cors",
             cache: "no-cache"
         }).then(response => response.json())
