add sorting of order history

--- a/admin/index.html
+++ b/admin/index.html
@@ -75,6 +75,7 @@
             console.log('Request succeeded with JSON response', response);
             var count = Object.keys(response['orders']).length;
             var tbody = document.getElementById("order_data");
+            response['orders'].sort(GetSortOrder("status"));
             if (count > 0){
                 document.getElementById("alert-box").style.display = 'none';
                 document.getElementById("orders_table").style.visibility = 'visible';
@@ -86,7 +87,7 @@
                     row += '<td>'+ response['orders'][i]['customer'] + '</td>';
                     row += '<td>'+ response['orders'][i]['status'] + '</td>';
                     row += '<td>';
-                    // row += '<a href="order_details.html?id='+ response['orders'][i]['order_id'] +'"><button type="button" class="button button_round_corner button_green">  View </button></a>';
+                    row += '<a href="order_details.html?id='+ response['orders'][i]['order_id'] +'"><button type="button" class="button button_round_corner button_green">  View </button></a>';
                     if (response['orders'][i]['status'] != 'complete'){
                         row += '<a href="order_details.html?id='+ response['orders'][i]['order_id'] +'"><button type="button" class="button button_round_corner button_blue">  Edit </button></a>';
                         // row += '<a href="order_details.html?id='+ response['orders'][i]['order_id'] +'"><button type="button" class="button button_round_corner button_red">  Cancel </button></a>';
@@ -104,6 +105,8 @@
             console.log('Request failed', error);
         });
     }
+
     </script>
+<script src="../js/scripts.js"></script>
 </body>
 </html>
