--- a/customer/index.html
+++ b/customer/index.html
@@ -29,7 +29,7 @@
 
         <div class="center">
                 <div class="alert alert-info" id="alert-box" style="display:none;">
-                    Click on the <div class="circle plus"></div> icon to add an item to your order
+                    <!-- populate this dynamically -->
                 </div>
             </div>
 
@@ -112,6 +112,8 @@
     }
 
     function getMenuItems() {
+        document.getElementById("alert-box").style.display = 'block';
+        document.getElementById("alert-box").innerHTML = 'Loading menu ...';
         return fetch('https://tims-fast-food.herokuapp.com/api/v1/menu', {
         }).then(response => response.json())
         .then(response => {
@@ -119,6 +121,8 @@
             var count = Object.keys(response['menu']).length;
             var items_div = document.getElementById("fooditems");
             document.getElementById("alert-box").style.display = 'block';
+            var new_info = 'Click on the <div class="circle plus"></div> icon to add an item to your order';
+            document.getElementById("alert-box").innerHTML = new_info;
             if (count > 0){
                 document.getElementById("menu_div").style.visibility = 'visible';
                 for(var i=0; i < count; i++)
