--- a/admin/index.html
+++ b/admin/index.html
@@ -24,11 +24,13 @@
 
     <div class="left_box" style="width:100%;">
         <div class="box-header well">
-            <h2>Food Orders</h2>
+            <h2>Available Orders</h2>
         </div>
         <div class="form_content">
 
-                <div class="alert alert-info" id="alert-box" style="visibility:hidden;">No orders history available.</div>
+                <div class="alert alert-info" id="alert-box" style="display:none;">
+                <!-- populate dynamically -->
+                </div>
 
             <table id="orders_table" style="visibility:hidden;">
                 <thead>
@@ -55,7 +57,8 @@
 
 <script>
     function getAllOrders() {
-        
+        document.getElementById("alert-box").style.display = 'block';
+        document.getElementById("alert-box").innerHTML = 'Loading available orders ...';
         var token = window.sessionStorage.getItem('token');
         var bearer_token = "Bearer " + token;
         console.log('TOKEN', bearer_token);
@@ -97,7 +100,8 @@
                 }
             }
             else{
-                document.getElementById("alert-box").style.visibility = 'visible';
+                document.getElementById("alert-box").style.display = 'block';
+                document.getElementById("alert-box").innerHTML = 'No orders available.';
             }
                     
         })
