ft(challenge4): view user order details
added view for viewing details of an order

[Delivers #161203856]

--- a/customer/order_history.html
+++ b/customer/order_history.html
@@ -21,7 +21,7 @@
 
     </div>
 
-    <div class="left_box">
+    <div class="left_box" style="width:100%;">
         <div class="box-header well">
             <h2>Order History</h2>
         </div>
