ensure requests are made over https

--- a/admin/index.html
+++ b/admin/index.html
@@ -62,7 +62,7 @@
         var token = window.sessionStorage.getItem('token');
         var bearer_token = "Bearer " + token;
         console.log('TOKEN', bearer_token);
-        return fetch('http://tims-fast-food.herokuapp.com/api/v1/orders', {
+        return fetch('https://tims-fast-food.herokuapp.com/api/v1/orders', {
             crossDomain:true,
             method: 'GET',
             headers: {
