--- a/admin/order_details.html
+++ b/admin/order_details.html
@@ -19,7 +19,7 @@
             <ul class="nav nav-tabs nav-menu">
                 <li><a class="nav-link active" href="index.html"> Home</a></li>
                 <li><a class="nav-link" href="food_items.html">Food Items</a></li>
-                <li><a class="nav-link" href="../index.html">Logout</a></li>
+                <li><a class="nav-link" href="../home.html">Logout</a></li>
             </ul>
         </div>
 
@@ -112,7 +112,7 @@
                 }
                 
                 var div = '<div class="menu-item header">';
-                div += '<h2>'+ response['order']['user_id'] +':'+ response['order']['status']  +'</h2>';
+                div += '<h2>'+ response['order']['customer'] +':'+ response['order']['status']  +'</h2>';
                 div += '</div>';
 
                 div += '<div class="food_item">';
