--- a/admin/edit_food_item.html
+++ b/admin/edit_food_item.html
@@ -75,7 +75,10 @@
     </div>
 
 </div>
-
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
+    
 <script>
 function getMenuItemDetails(itemId) {
         document.getElementById("alert-box").style.display = 'block';
