--- a/admin/index.html
+++ b/admin/index.html
@@ -55,7 +55,10 @@
 
 </div>
 
-
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
+    
 <script>
     function getAllOrders() {
         document.getElementById("alert-box").style.display = 'block';
