--- a/admin/order_details.html
+++ b/admin/order_details.html
@@ -54,7 +54,9 @@
 
     </div>
 </div>
-
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
 <script type="text/javascript">
 
     function accept_clicked(){
