--- a/customer/cancel_order.html
+++ b/customer/cancel_order.html
@@ -48,7 +48,9 @@
         </div>
 
 </div>
-
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
 <script>
     function delete_clicked(){
         // document.getElementById("alert-box").innerHTML = 'Oh, they really want you GONE.!!!';
