--- a/customer/index.html
+++ b/customer/index.html
@@ -78,6 +78,10 @@
 
 </div>
 
+<div class="footer">
+    <p>&copy; Fast Food Fast 2018</p>
+</div>
+
 <script>
     window.onscroll = function() {myFunction()};
 
