--- a/customer/order_history.html
+++ b/customer/order_history.html
@@ -50,6 +50,10 @@
 
 </div>
 
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
+    
 <script>
     function getUserOrders() {
         document.getElementById("alert-box").style.display = 'block';
