--- a/admin/add_food_item.html
+++ b/admin/add_food_item.html
@@ -72,6 +72,9 @@
     </div>
 
 </div>
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
 <script src="../js/scripts.js"></script>
 </body>
 </html>
