--- a/admin/delete_food_item.html
+++ b/admin/delete_food_item.html
@@ -70,7 +70,10 @@
     </div>
 
 </div>
-
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
+    
 <script>
     function delete_clicked(){
         document.getElementById("alert-box").innerHTML = 'Oh, they really want you GONE.!!!';
