--- a/admin/food_items.html
+++ b/admin/food_items.html
@@ -51,7 +51,10 @@
     </div>
 
 </div>
-
+<div class="footer">
+        <p>&copy; Fast Food Fast 2018</p>
+    </div>
+    
 <script type="text/javascript">
 
     function deleteRow(r) {
