change font for menu

--- a/customer/index.html
+++ b/customer/index.html
@@ -14,7 +14,7 @@
 
     <div class="collapsible-menu">
             <input type="checkbox" id="menu">
-            <label for="menu">Menu</label>
+            <label for="menu"> Food Menu</label>
             <div class="menu-content">
                 <ul class="nav nav-tabs nav-menu">
                     <li><a class="nav-link active" href="index.html"> Home</a></li>
