--- a/admin/index.html
+++ b/admin/index.html
@@ -13,7 +13,7 @@
 
     <div class="collapsible-menu">
             <input type="checkbox" id="menu">
-            <label for="menu"> Orders</label>
+            <label for="menu"> Menu</label>
             <div class="menu-content">
                 <ul class="nav nav-tabs nav-menu">
                     <li><a class="nav-link active" href="index.html"> Home</a></li>
