--- a/customer/index.html
+++ b/customer/index.html
@@ -14,7 +14,7 @@
 
     <div class="collapsible-menu">
             <input type="checkbox" id="menu">
-            <label for="menu"> Food Menu</label>
+            <label for="menu">Menu</label>
             <div class="menu-content">
                 <ul class="nav nav-tabs nav-menu">
                     <li><a class="nav-link active" href="index.html"> Home</a></li>
@@ -26,7 +26,7 @@
 
     <div class="menu_box">
         <div class="box-header well">
-            <h2>Menu</h2>
+            <h2> Food Menu</h2>
         </div>
 
         <div class="center">
