add delete item function & hide footer

--- a/admin/delete_food_item.html
+++ b/admin/delete_food_item.html
@@ -74,8 +74,8 @@
     
 <script>
     function delete_clicked(){
-        document.getElementById("alert-box").innerHTML = 'Oh, they really want you GONE.!!!';
-        // updateOrderStatus(orderId, 'cancelled');
+        // document.getElementById("alert-box").innerHTML = 'Oh, they really want you GONE.!!!';
+        deleteMenuItem(itemId);
     }
 
     function getMenuItemDetails(itemId) {
